2.7.0 ==================================================================
* мелкие косметические изменения на вкладке "Поиск" панели "Выбор"
- исправлена ошибка в потрохах класса AlphaListChooser, которая ещё
  ни разу не проявлялась, но непорядок, однако

2.6.2 ==================================================================
+ еще одна функция, которая должна была быть изначально:
  при извлечении книг у создаваемых файлов устанавливается время и дата
  создания такими же, как у исходных файлов в архиве библиотеки

2.6.1 ==================================================================
- исправлена давняя ошибка, из-за которой на панели извлечения книг
  не отображалось количество выбранных в списке книг
+ добавлена еще одна функция, которая должна была быть изначально:
  теперь при запуске программы проверяется время изменения индексного
  файла библиотеки (.inpx), и если оно не соответствует сохраненному
  в БД настроек при предыдущем импорте, предлагается импортировать
  индексный файл
+ после импорта индексного файла и при наличии изменений отображается
  окно со статистикой (сколько книг/авторов добавлено и т.п.)
+ sqlite теперь считает, что PRAGMA synchronous=OFF и journal_mode=MEMORY,
  ибо содержимое БД flibrowser2 не настолько ценное, чтоб терпеть ради
  него тормоза при записи в БД

2.6.0 ==================================================================
* т.к. меню разрослось, оно теперь в виде стандартного menubar
+ в меню "Файл" добавлен забытый со времен тулбара элемент "Импорт
  библиотеки"
+ в меню "Книги" добавлены подменю "Избранные авторы" и "Избранные циклы"
  с соответствующими списками;
  списки изменяются из панелей выбора по авторам и циклам соответственно:
  элемент списка авторов или циклов добавляется в список избранного или
  удаляется из него нажатием клавиши "Enter" или двойным кликом левой
  кнопки мыши;
  списки избранного хранятся в основной БД
* исправления и дополнения в README
