@@ -1,4 +1,9 @@
 2.7.0 ==================================================================
++ изменена структура БД: в таблицу "books" добавлено поле "filesize";
+  размер файла также теперь отображается в списке найденных книг
+* изменения в процедурах работы с БД - при изменении версии БД
+  программа будет предлагать заново импортировать индексный файл
+  библиотеки
 * мелкие косметические изменения на вкладке "Поиск" панели "Выбор"
 - исправлена ошибка в потрохах класса AlphaListChooser, которая ещё
   ни разу не проявлялась, но непорядок, однако
